--- a/README
+++ b/README
@@ -2,3 +2,4 @@ This is a trial of using git command, learn and study is the purpose.
 2010.03.11
 
 Now change it based off of "my_branch" branch which created on "master" branch, see what happened?
+update this only
