3rd_branch created

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ This is a trial of using git command, learn and study is the purpose.
 
 Now change it based off of "my_branch" branch which created on "master" branch, see what happened?
 update this only
+
+It's changing for 3rd_branch only.
